# databricks-apps-fastapi-starter

./: .bandit  .coderabbit.yml  .dockerignore  .env.example.mcp  .gitignore  .mcp.json  .snyk  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  api.py  app.yaml  config.py  databricks.yml  docker-compose.yml  env.example  main.py  openapi.json  pyproject.toml  requirements.txt  run_app.py  skills-lock.json  sonar-project.properties  workspace.py
.ai-dev-kit/: .installed-skills
.claude/: settings.json
.claude/agents/: dependency-manager.md  typescript-pro.md
.codex/: config.toml
.cursor/: mcp.json
.gemini/: settings.json
.github/: dependabot.yml
.github/workflows/: ci-load-test.yml  ci.yml  deploy.yml  lint.yml  snyk-security.yml  sonar.yml
alembic/: env.py
alembic/versions/: 0001_create_todo_table.py  0002_create_app_user_table.py  0003_rename_app_user_to_users.py  0004_add_todo_created_by_index.py  0005_create_chat_sessions.py  0006_create_messages.py  0007_create_file_records.py
app/: main.py
app/api/: api.py  chat_stream_controller.py  chats_controller.py  dashboard_controller.py  documents_controller.py  examples_controller.py  health_controller.py  projects_controller.py  router.py  todo_controller.py  user_controller.py
app/core/: bootstrap.py  cache.py  config.py  database.py  deps.py  errors.py  health.py  http_cache.py  integrations.py  logging.py  observability.py  runtime.py  sqlalchemy.py
app/middlewares/: request_size.py  security_headers.py  user_info.py  workspace_client.py
app/models/: __init__.py  base.py  chat_session_model.py  file_record_model.py  health_dto.py  message_model.py  todo_dto.py  todo_model.py  user_dto.py  user_model.py
app/repositories/: chat_repository.py  delta_todo_repository.py  lakebase_demo_repository.py  project_repository.py  todo_cache_keys.py  todo_command_repository.py  todo_query_repository.py  todo_repository.py  user_repository.py  user_settings_repository.py
app/services/: chat_service.py  document_service.py  project_service.py  todo_service.py
backend/: .gitignore  Makefile  app.yaml  docker-compose.yml  env.example  openapi.yaml  pyproject.toml  requirements.txt  run_app.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/agents/: __init__.py  contracts.py  factory.py  request_utils.py  response_utils.py
backend/app/agents/adapters/: __init__.py  app_adapter.py  genie_adapter.py  serving_adapter.py
backend/app/agents/minimal_serving_agent/: README.md  agent.py  deploy.py
backend/app/api/: agents_controller.py  chat_stream_controller.py  examples_controller.py  health_controller.py  knowledge_controller.py  me_controller.py  router.py  settings_controller.py
backend/app/chat/: agent.py  context.py  memory.py  orchestrator.py  registry.py  tools.py
backend/app/chat/title/: prompts.py  service.py
backend/app/core/: bootstrap.py  config.py  deps.py  errors.py  health.py  integrations.py  logging.py  mlflow_runtime.py  observability.py  runtime.py
backend/app/core/databricks/: _async_bridge.py  ai_gateway.py  jobs.py  knowledge_assistant.py  serving.py  uc_files.py  vector_search.py
backend/app/core/db/: engine.py  url.py
backend/app/middlewares/: request_context.py  request_size.py  user_info.py
backend/app/models/: __init__.py  base.py  chat_session_model.py  health_dto.py  project_model.py  user_model.py  user_settings_model.py
backend/app/repositories/: chat_repository.py  document_repository.py
backend/app/services/: chat_service.py  chat_stream_service.py  user_settings_service.py
backend/evals/data/: sample_questions.json
backend/notebooks/jobs/: starter_job.py
backend/notebooks/serving/: deploy.py  starter_model.py
backend/scripts/: eval_agents.py  export_openapi.py  upsert_knowledge_assistant_source.py
backend/tests/: conftest.py  test_agent_adapters.py  test_agent_contracts.py  test_agents_controller.py  test_config.py  test_mlflow_runtime.py  test_obo.py  test_observability.py  test_routing.py
backend/tests/api/examples/: test_optional_examples.py
backend/tests/chat_v2/: test_memory.py  test_orchestrator.py  test_registry.py  test_tools.py
backend/tests/core/databricks/: test_genie.py  test_serving.py  test_vector_search.py
backend/tests/core/db/: test_url.py
backend/tests/core/security/: test_path_validation.py
backend/tests/middlewares/: test_request_size.py
backend/tests/modules/users/: test_user_repository.py
backend/tests/performance/: locustfile.py
client/: .prettierignore  README.md  components.json  index.html  orval.config.ts  package.json  stryker.config.json  tsconfig.json  vite.config.ts
client/src/: i18n.ts  index.css  main.test.tsx
controllers/: __init__.py  demo.py  health.py  todo.py  user.py
core/: __init__.py  auth.py  database.py  deps.py  errors.py  logging.py  sqlalchemy.py  vector_search.py
docs/: security-hardening.md
frontend/: .env.example  .gitignore  README.md  eslint.config.js  orval.config.ts  package-lock.json  vite.config.ts
frontend/.storybook/: preview.ts
frontend/src/: main.tsx
middlewares/: __init__.py  authorization.py  security_headers.py  user_info.py  workspace_client.py
modules/: base.py
modules/todo/: controllers.py  mappers.py  models.py  repositories.py  schemas.py  services.py
modules/users/: models.py  repository.py  schemas.py
notebooks/evals/: README.md  _agent_eval_common.py  run_agent_evals.py
notebooks/jobs/: bootstrap_rag_resources.py  rag_ingestion_job.py  starter_job.py
notebooks/serving/: agent.py  deploy.py  requirements.txt  starter_model.py
resources/: app.yml  compute.yml  database.yml  evals.yml  experiment.yml  secrets.yml  serving.yml  serving_agent.yml  unity_catalog.yml  vector_search.yml
scripts/: export_openapi.py
tests/: conftest.py  test_auth.py  test_config.py  test_health.py  test_main.py  test_obo.py  test_performance_cookie.py  test_routing.py  test_timeout.py  test_uc_controller.py
tests/core/: test_cache.py  test_http_cache.py
tests/integration/: test_sse.py
(+182 files in other folders)
