[project]
name = "databricks-apps-fastapi-starter"
version = "0.1.0"
description = "Sample FastAPI application to showcase how to leverage Databricks services."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.3",
    "asyncpg==0.30.0",
    "pandas==2.2.3",
    "numpy>=1.24.4,<2.0",
    "pydantic==2.11.5",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.1.0",
    "databricks-sdk==0.56.0",
    "sqlalchemy==2.0.41",
    "secure==1.0.1",
    "fastapi-pagination==0.13.2",
    "openai==1.30.1",
    "databricks-sql-connector==4.0.5",
    "databricks-vectorsearch==0.56",
    "pyarrow==20.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "bandit",
    "alembic==1.16.1",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "locust>=2.19,<3",
    "httpx",
    "pytest-mock",
]

[tool.mypy]
ignore_missing_imports = true
exclude = ["notebooks"]
disable_error_code = ["attr-defined", "arg-type", "index", "union-attr"]

[tool.ruff]
line-length = 88
extend-exclude = ["notebooks"]

[tool.ruff.lint]
ignore = ["F401"]

[tool.bandit]
skips = ["B101", "B105", "B608"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "core*",
    "controllers*",
    "middlewares*",
    "modules*",
]
exclude = [
    "tests*",
    "notebooks*",
]
