[project]
name = "databricks-apps-fastapi-starter"
version = "0.1.0"
description = "Sample FastAPI application to showcase how to leverage Databricks services."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.42.0",
    "asyncpg==0.31.0",
    "pandas==2.3.3",
    "numpy>=2.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.2",
    "databricks-sdk==0.100.0",
    "sqlalchemy==2.0.48",
    "secure==1.0.1",
    "fastapi-pagination==0.15.10",
    "openai==2.28.0",
    "databricks-sql-connector==4.2.5",
    "databricks-vectorsearch==0.66",
    "pyarrow==23.0.1",
    "python-multipart==0.0.22",
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-instrumentation-sqlalchemy",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-httpx",
    "aiocache[redis]>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "bandit",
    "alembic==1.18.4",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "locust>=2.19,<3",
    "httpx",
    "pytest-mock",
]

[tool.mypy]
ignore_missing_imports = true
exclude = ["notebooks"]
disable_error_code = ["attr-defined", "arg-type", "index", "union-attr"]

[tool.ruff]
line-length = 88
extend-exclude = ["notebooks"]

[tool.ruff.lint]
ignore = ["F401"]

[tool.bandit]
skips = ["B101", "B105", "B608"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "app*",
]
exclude = [
    "tests*",
    "notebooks*",
]
