[project]
name = "databricks-apps-fastapi-starter"
version = "0.1.0"
description = "Sample FastAPI application to showcase how to leverage Databricks services."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.136.0",
    "uvicorn==0.44.0",
    "asyncpg==0.31.0",
    "pandas==3.0.2",
    "numpy>=2.0",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "python-dotenv==1.2.2",
    "databricks-sdk==0.103.0",
    "sqlalchemy==2.0.49",
    "secure==1.0.1",
    "openai==2.32.0",
    "databricks-sql-connector==4.2.5",
    "databricks-vectorsearch==0.67",
    "pyarrow==23.0.1",
    "python-multipart==0.0.26",
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-instrumentation-sqlalchemy",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-httpx",
    "langgraph>=0.4,<1",
    "langchain-openai>=0.3,<1",
    "langchain-core>=0.3,<1",
    "mlflow>=2.20",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "bandit",
    "alembic==1.18.4",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "locust>=2.19,<3",
    "httpx",
    "pytest-mock",
    "pyyaml",
    "types-PyYAML",
]

[tool.mypy]
ignore_missing_imports = true
exclude = ["notebooks"]
disable_error_code = ["attr-defined", "arg-type", "index", "union-attr"]

[tool.ruff]
line-length = 88
extend-exclude = ["notebooks"]

[tool.ruff.lint]
ignore = ["F401"]

[tool.bandit]
skips = ["B101", "B105", "B608"]
exclude_dirs = [".venv", "notebooks"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "app*",
]
exclude = [
    "tests*",
    "notebooks*",
]
